examples/test/testpolicy15351.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15351
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key7: value24
      key10: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value14
          key42: value0
      podSelector:
        matchLabels:
          key4: value2
          key10: value20
